@@ -1,3 +1,9 @@
+9 January 2015: Wouter
+	- Fix bug#637: fix that nsd.db grows limitlessly, an off by one
+	  on one megabyte free chunks, created during AXFRs of large zones,
+	  that caused the one megabyte chunk to be leaked.
+	- Fix udb-inspect for one megabyte chunks, counts and statistics.
+
 6 January 2015: Wouter
 	- Fix spinning NSD with lots of failing transfers, due to pointer
 	  comparison using void pointer subtraction (from Otto Moerbeek).
